tests/specs/ClassExtendsImplements.txt
# mod.ts
export class Class extends Object implements Iterator, Iterable {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class extends Object implements Iterator, Iterable {}
  | ^


# output.txt
Defined in file:///mod.ts:1:1

class Class extends Object implements Iterator, Iterable



# output.json
[
  {
    "kind": "class",
    "name": "Class",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": "Object",
      "implements": [
        {
          "repr": "Iterator",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "Iterator"
          }
        },
        {
          "repr": "Iterable",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "Iterable"
          }
        }
      ],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
